grid practice mostly

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <title>Website Copy</title>
 </head>
 <body>
-    
+    <header>
+        <h1>AV Club</h1>
+        <nav>
+            <a href="#">page 1</a>
+            <a href="#">page 2</a>
+            <a href="#">page 3</a>
+        </nav>
+        <div>
+            Log In
+        </div>
+    </header>
+    <main></main>
+    <footer>
+        &copy; MMXXI HuminaHumina
+    </footer>
 </body>
 </html>
